Small spacing fix for H3 tags.

--- a/_sass/generic/_typography.scss
+++ b/_sass/generic/_typography.scss
@@ -51,7 +51,7 @@ a {
 ||  Typography - Headlines
 -------------------------------------------------------------------*/
 .blogpost {
-  h4 {
+  h3, h4 {
     margin: 0 0 $spacing-extra-small;
   }
 }
